optmize code and structure in all files. rename some class and functions with more readable name. recycle some resources allocate by new QString. just did some small things.but I think it is important.

--- a/PeerClientUI/PeerClientUI.vcxproj
+++ b/PeerClientUI/PeerClientUI.vcxproj
@@ -154,7 +154,7 @@
     </CustomBuild>
     <ClInclude Include="resource.h" />
     <ClInclude Include="stringutils.h" />
-    <ClInclude Include="UIcallbackInterface.h" />
+    <ClInclude Include="UiObserver.h" />
     <ClInclude Include="VCWnd.h" />
     <ClInclude Include="VideoRenderer.h" />
   </ItemGroup>
