--- a/PeerClientUI/PeerClientUI.vcxproj.filters
+++ b/PeerClientUI/PeerClientUI.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClInclude Include="PeerConnectionClientObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UIcallbackInterface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="stringutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -121,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UiObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
